DB 테이블 이름 정리 및 누적 변경 일괄 반영
테이블 이름 규칙이 md_ / balance_ / site_ / 무접두사 네 갈래로 갈라져 있어
이름만 보고는 그 테이블이 무엇인지 알 수 없었다. 더 위험한 건 이름이 서로
반대로 읽히는 쌍이었다.

  - md_test_results 는 사용자가 받은 결과가 아니라 제작자가 미리 만들어 둔
    점수 구간별 결과지 정의(result_title/min_score/max_score)였고,
    사용자가 실제로 받은 결과는 md_test_history 에 있었다. 정확히 뒤바뀌어
    읽힌다. 앞을 md_test_result_type, 뒤를 md_test_play 로 바꿔 "정의" 와
    "기록" 이 구분되게 했다.
  - site_visit_hourly 는 이름은 방문인데 쌓이는 값은 view_count, 즉 페이지뷰다.
    일자별 visit_count(순방문)와 단위가 다른데 같은 이름을 써서 두 숫자를
    같은 것으로 착각하게 만들었다. md_pageview_hourly 로 나눴다.
  - md_test_category 와 md_reports 는 심리테스트 전용처럼 보이지만 밸런스
    게임도 함께 쓰는 공용이다. md_content_category / md_content_report 로
    사용처를 드러냈다.

md_ 를 전 테이블 공통 네임스페이스로 삼고 기능 묶음(test/balance/visit)을
뒤에 두고 전부 단수로 통일했다. 16개 전부 rename.

운영 DB 에는 아직 적용하지 않았다. table_rename.sql 은 RENAME 후 구 이름을
뷰로 남겨 구버전 WAR 가 계속 동작하게 하는 무중단 절차이고, 실행 전 점검은
table_rename_precheck.sql 로 한다. 방문 집계 3개가 INSERT ... ON DUPLICATE
KEY UPDATE 를 쓰는데 뷰 지원이 MariaDB 버전을 타므로, 스크립트 안의 검증
블록을 운영에서 먼저 돌려보고 실패하면 점검 시간을 잡는 방식으로 전환한다.

함께 쌓여 있던 미커밋 변경도 같이 넣는다. 공용 파일(SecurityConfig, header,
script, link, main_layout, 컨트롤러 여럿)을 여러 기능이 동시에 고쳐 놓아
기능별로 자르면 중간 커밋이 빌드되지 않는다. 포함된 것:

  - 콘텐츠·댓글 신고 기능 (MdReport*, report_modal, admin/report, report.sql)
  - 금칙어 필터 우회 차단 강화 (ProfanityUtil)
  - 익명 쿠키 톰캣 10 호환 (Set-Cookie 직접 생성)
  - 애드센스 대응: 약관 개정, 서비스 소개·문의 페이지, 업로드 권리 고지,
    회원가입 약관 동의, 쿠키 동의 철회 링크
  - SEO 메타·sitemap 보강, GA4 스니펫 분리(analytics.js)
  - PWA manifest·파비콘·앱 아이콘
  - 배포 스크립트(scripts/deploy.sh), CLAUDE.md, docs/I18N.md

저장소 루트의 .idea/ 와 seed/(gen_images.py 가 만드는 SVG 88MB)는
루트 .gitignore 에 추가해 제외했다.

빌드·테스트 통과 (221건, failures=0 errors=0).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>